kubernetes/authentik/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  labels:
    istio.io/dataplane-mode: ambient
