kubernetes/authentik/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-postgresql
  namespace: authentik
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: authentik-postgresql
  template:
    metadata:
      labels:
        app: authentik-postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:17.11-bookworm@sha256:639ab7ceb90e13123085b741fb31ef493fba25463002f6da665352e7b534b652
          ports:
            - name: postgresql
              containerPort: 5432
          readinessProbe:
            exec:
              command:
                - pg_isready
                - --username=authentik
                - --dbname=authentik
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - pg_isready
                - --username=authentik
                - --dbname=authentik
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql-data
          hostPath:
            path: /data/authentik/postgresql
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-postgresql
  namespace: authentik
spec:
  selector:
    app: authentik-postgresql
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
  type: ClusterIP
